# LUI

./: .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  DOCS.md  FOR-JUDGES.md  INTERCEPTOR.md  MVP.md  PRIVACY.md  README.md  SECURITY.md  build.gradle  idea.md  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  publish.yml  test.yml
app/: build.gradle  proguard-rules.pro
app/src/fdroid/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/kws/: keywords.txt
app/src/main/res/anim/: cursor_blink.xml  message_fade_in_lui.xml  message_fade_in_user.xml
app/src/main/res/drawable/: btn_filled.xml  btn_outlined.xml  bubble_user.xml  card_breathing_bg.xml  (+14 more)
app/src/playstore/: AndroidManifest.xml
docs/: ambient-sounds.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
hermes-skill/: README.md  SKILL.md  connect_hermes.sh  lui_connector.py
llama/: build.gradle
llama/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h
lui-node/: README.md  package.json
lui-node/src/: cli.js  index.js
lui-python/: README.md  pyproject.toml
lui-python/src/lui/: __init__.py  bridge.py  cli.py
lui-python/src/lui_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lui-python/tests/: test_bridge.py
relay/: Dockerfile  README.md  fly.toml  relay_server.py
scripts/: bump-version.sh  release.sh
sites/: health.html  index-full.html  index.html  privacy.html
(+135 files in other folders)
